--- a/python-client/pyproject.toml
+++ b/python-client/pyproject.toml
@@ -43,7 +43,7 @@ python = ">=3.8.0, < 4.0.0"
 
 # DS
 # numpy = "^1.21.2"
-pandas = ">=1.4.0,<2.0.0"
+pandas = ">=1.4.0"
 pyarrow = ">=9.0.0"
 
 # viz - only altair is required
